# obs_chat_bot

./: .gitignore  Cargo.toml  Changelog.md  LICENSE  README.md  example_config.toml
src/: build_res.rs  common.rs  help.rs  leave.rs  main.rs  openqa.rs  submitrequests.rs
