[package]
name = "obs_chat_bot"
version = "0.1.0"
authors = ["Martin Sirringhaus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix_bot_api = { path = "../matrix_bot_api", version = "0.4"}
config = "0.9.3" # For src/bin only. cargo doesn't cleanly support dependencies for only parts

