[package]
name = "obs_chat_bot"
version = "0.5.0"
authors = ["Martin Sirringhaus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix_bot_api = "0.5.2"
config = "0.9.3" # For src/bin only. cargo doesn't cleanly support dependencies for only parts
lapin = "^0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
xdg = "2.2.0"
